SPRING WEB SERVICES CHANGELOG
=============================
http://www.springframework.org/spring-ws

Changes in version 1.0-M2
-------------------------
Package org.springframework.oxm
* all marshallers support StaxSources now (#SWS-36)

Pacakge org.springframework.ws.endpoint
* improved endpoint test suite
* AbstractStaxPayloadEndpoint now use StaxSource corrently (#SWS-38)

Package org.springframework.ws.context
* changed contract of MessageContext.getResponse(): now creates a response if none has been created. Required because
  creating SOAP fault when a response was already set threw an exception

Package org.springframework.ws.soap
* improved content-type handling (#SWS-32)
* changed contract of Mess

Package org.springframework.ws.soap.endpoint
* added SoapEnvelopeLoggingInterceptor, which logs the entire SoapEnvelope

Package org.springframework.ws.soap.saaj.support
* added SaajUtils.getVersion()

Package org.springframework.ws.transport.http
* removed J2EE 1.4 dependency (#SWS-31)

Package org.springframework.xml
* moved package to seperate jar file, since oxm depended on it

Changes in version 1.0-M1
-------------------------

Package org.springframework.oxm.jaxb
* added support for JAXB 2: refactored JaxbMarshaller into AbstractJaxbMarshaller, Jaxb1Marshaller and Jaxb2Marshaller
* made JaxbMarshallers thread safe
* added property for a ValidationEventHandler

Package org.springframework.ws.axiom
* added AXIOM (AXis Object Model) implementation of SoapMessage hierarchy

Package org.springframework.ws.endpoint
* added AbstractDom4JPayloadEndpoint
* added AbstractXomPayloadEndpoint
* renamed AbstractTransformingEndpoint to TransformerObjectSupport

Package org.springframework.ws.soap
* added SoapFaultDetail and SoapFaultDetailElement
* improved SoapMessage test suite
* fixed serious bug which resulted in not-understood mustUnderstand headers being silently ignored

Package org.springframework.ws.soap.endpoint
* added SimpleSoapExceptionResolver
